# katas-codewars

./: .gitignore  README.md
katas-cpp/: CMakeLists.txt
katas-cpp/src/: CMakeLists.txt  abbrev_name.cpp  abbrev_name.h  main.cpp  mults_of_3_or_5.cpp  mults_of_3_or_5.h  phone_number.cpp  phone_number.h
katas-cpp/tests/: CMakeLists.txt  test_abbrev_name.cpp  test_mults_of_3_or_5.cpp  test_phone_number.cpp
